--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </span>
             <header class="major">
               <h3>
-                
+                Food and Beverages Packaging
               </h3>
               <!-- <p>Food and Beverages Packaging</p> -->
             </header>
@@ -216,7 +216,7 @@
             </header>
             <ul class="medical" style="font-weight: 1000">
               <h4>
-                Guidence & support to Medical & Pharma industry in following
+                Guidance & support to Medical & Pharma industry in following
                 areas:
               </h4>
 
@@ -239,7 +239,7 @@
               <h2>Packaging Development support</h2>
             </header>
             <ul class="medical" style="font-weight: 1000">
-              <h4>Guidence & support to industry in following areas:</h4>
+              <h4>Guidance & support to industry in following areas:</h4>
 
               <li>Right Packaging Selection at First place</li>
               <li>Vendor Development and VendorDatabase</li>
