--- a/index.html
+++ b/index.html
@@ -48,16 +48,11 @@
       <div class="inner">
         <header class="major">
           <div>
-          <div class="flex-cont">
-            <div class='flex-child-1'>
-              <h1>TAKE YOUR PACKAGING TO</h1>
-            </div>
-            <div class='flex-child-2'>
-              <h1 style="color:red">LEVEL X</h1>
-            </div>
-          </div>
+              <span class='span1'>TAKE YOUR PACKAGING TO </span>
+              <span class='span1' style="color:red">LEVEL X</span>
           </div>
         </header>
+      </br>
         <div class="content grey">
           <h2 class='no-marg-right'>Packaging:</h2>
           <div>
