corrected products spelling

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <li>Device Development</li>
             <li>Device Vendors selection & right device Costing</li>
             <li>Own device development OR Off the shelf Device</li>
-            <li>Device for combination ptoducts</li>
+            <li>Device for combination products</li>
             <li>Device Testing and Documentation(DHF)</li>
             <li>Device Packaging...And More</li>
           </ul>
